# DNA_LM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: data.ipynb  transformer_testing.ipynb
src/data/: dataset.py  tokeniser.py
src/dna_lm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: attention.py  embedding.py  transformer.py
tests/: test_attention.py  test_embedding.py  test_tokeniser.py  test_transformer.py
