[project]
name = "dna-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genomic-benchmarks>=1.0.0",
    "numpy>=2.4.2",
    "ruff>=0.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
